# lis3dh-rs

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo/: config
examples/: cpx.rs  motion_wakeup.rs
src/: i2c.rs  interrupts.rs  lib.rs  register.rs  spi.rs
