[package]
name = "lis3dh"
version = "0.1.0"
authors = ["Benjamin Bergman <benjamin.bergman@humanrights.ca>"]
edition = "2018"
keywords = ["embedded-hal-driver", "accelerometer"]

[dependencies]
embedded-hal = "~0.2"
accelerometer = { version = "0.6", features = ["orientation"] }

[dev-dependencies]
circuit_playground_express = { path = "../atsamd/boards/circuit_playground_express", features = ["use_semihosting"] }
panic-halt = "~0.2"
cortex-m-rt = "~0.6"
cortex-m-semihosting = "~0.3"
