[package]
name = "lis3dh"
description = "An embedded-hal driver for the LIS3DH accelerometer that implements the generic accelerometer trait"
version = "0.1.0"
authors = ["Benjamin Bergman <ben@benbergman.ca>", "Paul Sajna <sajattack@gmail.com>"]
edition = "2018"
keywords = ["embedded-hal-driver", "accelerometer"]
repository = "https://github.com/BenBergman/lis3dh-rs"

[dependencies]
embedded-hal = "~0.2"
accelerometer = { version = "~0.6", features = ["orientation"] }

[dev-dependencies]
circuit_playground_express = { version = "~0.4.0", features = ["use_semihosting"] }
panic-halt = "~0.2"
cortex-m-rt = "~0.6"
cortex-m-semihosting = "~0.3"
